test/compile_failure/26_alignof_expression.c
// EXPECT-ERRORS: 1
// EXPECT: alignof requires a type name
int main() {
    int value = 1;
    return alignof(value);
}
